fixed top-row z-index

--- a/ItIsPizzaDay.Client/wwwroot/css/site.css
+++ b/ItIsPizzaDay.Client/wwwroot/css/site.css
@@ -18,11 +18,13 @@ app {
 
 .main {
     flex: 1;
+    position: relative;
 }
 
     .main .top-row {
         background-color: #e6e6e6;
         border-bottom: 1px solid #d6d5d5;
+        z-index: 1020;
     }
 
 .sidebar {
